[package]
name = "wasm-game"
version = "0.1.0"
authors = ["kenkoooo <kenkou.n@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.40"
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3.40"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'File',
  'FileList',
  'FileReader',
  'Element',
  'KeyboardEvent',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'ProgressEvent',
  'Window',
]
